--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
-  <h1>Hello</h1>
-  
+  <div id="app">{{hello}}</div>
+  <script src="/assets/js/app.js"></script>
+
 </body>
+
 </html>
